# rust-auto-complete

./: .gitignore  100_000_words.txt  Cargo.toml  ReadME.md
client/: Cargo.toml
client/src/: main.rs
completion/: Cargo.toml
completion/src/: internal.rs  lib.rs  naive.rs  trie.rs
completion/src/benches/: my_benchmark.rs
server/: Cargo.toml
server/src/: main.rs
