[package]
name = "auto-complete"
version = "0.1.0"
authors = ["Prajith <kprajith@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "client",
    "server",
    "completion"
]

[lib]
name = "completion"
path = "completion/src/lib.rs"

[[bin]]
name = "server"
path = "server/src/main.rs"

[[bin]]
name = "client"
path = "client/src/main.rs"


[dependencies]

